--- a/Assessment/4. inprogress_PassDatatoAPI.html
+++ b/Assessment/4. inprogress_PassDatatoAPI.html
@@ -1,6 +1,6 @@
 <script>
     
-document.querySelector("#wrapper > table:nth-child(7) > tbody > tr > td:nth-child(2) > div > form > button").addEventListener("click", function(event){
+document.querySelector("button.btn.add-to-cart").addEventListener("click", function(event){
     event.preventDefault();
     
     let btnText = event.target.innerText
