--- a/Assessment/3.completed_SortProducts.html
+++ b/Assessment/3.completed_SortProducts.html
@@ -1,44 +1,60 @@
 <script>
-  (function () {
-    const listItems = document.querySelectorAll(".list-group-item");
-    console.log(listItems); // array of elments
+(function () {
+
+    let listItems = null
+    if (localStorage.getItem('listState') !== null) {
+        let lastSavedListGroupInnerHtml = localStorage.getItem('listState')
+        document.querySelector('.list-group').innerHTML = lastSavedListGroupInnerHtml
+        listItems = document.querySelectorAll(".list-group-item");
+    } else {
+        listItems = document.querySelectorAll(".list-group-item");
+    }
+
+    console.log(listItems); // array of list elements
 
     listItems.forEach((item, index) => {
-      let addToCartBtn = item.querySelector("button.btn.add-to-cart");
-      addToCartBtn.addEventListener("click", function () {
-        if (item.hasAttribute("clickCount")) {
-          let count = parseInt(item.getAttribute("clickCount"))+1
-          item.setAttribute("clickCount", count);
-          console.log(count, typeof count)
+        let addToCartBtn = item.querySelector("button.btn.add-to-cart");
+        addToCartBtn.addEventListener("click", function () {
+            if (item.hasAttribute("clickCount")) {
+                let count = parseInt(item.getAttribute("clickCount")) + 1
+                item.setAttribute("clickCount", count);
+                console.log(count, typeof count)
 
-          if (count > 5) {
-            sendToLast(index, item);
-          }
-        } else {
-          item.setAttribute("clickCount", 1);
-        }
+                if (count > 5) {
+                    sendToLast(index, item);
+                }
+            } else {
+                item.setAttribute("clickCount", 1);
+            }
 
-        console.dir(item);
-      });
+            saveToLocalStorage()
+            console.dir(item);
+        });
     });
 
     function sendToLast(pos, listItem) {
-      let newArr = [];
-      listItems.forEach((item, index) => {
-        if (index !== pos) {
-          newArr.push(item);
-        }
-      });
-      newArr.push(listItem);
-      console.log("newArr", newArr);
+        let newArr = [];
+        listItems.forEach((item, index) => {
+            if (index !== pos) {
+                newArr.push(item);
+            }
+        });
+        newArr.push(listItem);
+        console.log("newArr", newArr);
 
 
 
-      let listWrapper = document.querySelector('.list-group')
-      
-      newArr.forEach((item, index)=>{
-        listWrapper.appendChild(item)
-      })
+        let listWrapper = document.querySelector('.list-group')
+
+        let strArr = []
+        newArr.forEach((item, index) => {
+            listWrapper.appendChild(item)
+            strArr.push(item.toString())
+        })
     }
-  })();
+
+    function saveToLocalStorage(){
+        localStorage.setItem("listState", document.querySelector('.list-group').innerHTML)
+    }
+})();
 </script>
